--- a/TP2 Morse/mebare_h/README
+++ b/TP2 Morse/mebare_h/README
@@ -1,3 +1,2 @@
-Salut, voici mon TP, j'ai plutot bien reussi le debut mais a partir de la fin j'ai commencer a passer du temps sur les fonctions. 
-Une fois arrive au Level 4, je me suis un peu perdu avec les string, je n'ai pas su comment les manipuler.
-A part les 2 derniers exercices, jai bien reussi.
+﻿Bonjour, voici mon TP, j'ai plutot bien reussi le debut mais a partir de la fin j'ai commencer a passer du temps sur les fonctions. Un camarade m'a fortement aidé pour la dernière question (pour la 2eme partie de la fonction)
+A part les 3 derniers Levels, j'ai plutot bien reussi, mais je trouve que je ne suis pas au point pour les string, je n'arrive pas bien à les manipuler.
