--- a/TP3  SUDOKU/mebare_h/README
+++ b/TP3  SUDOKU/mebare_h/README
@@ -1,3 +1,3 @@
-J'ai réussi et assimilé tout ce que j'ai fait, je l'ai fait avec "facilité" à part pour le 2.5.
-Ce dernier m'a demandé pas mal de reflexion, j'y ai passé environ 3 heures car j'ai essayé différentes manières de l'aborder (distances et coordonnées) puis j'ai aussi buter sur une erreur au niveau de l'ordre des instructions qui donnait un shuriken en graphique (mais c'était cool)
-Mes difficultés à travers ce TP ont été les appels recursifs multiples et la recherche d'erreur à corriger qui me faisait perdre beaucoup de temps.
+Bonsoir (ou bonjour), alors ce TP je n'ai pas du tout réussi. Je me suis arrêté au 2.2, je n'ai pas du tout réussi le reste parce que je ne voyais pas du tout comment ça pouvait fonctionner alors je me pose des questions, parce que j'ai assisté à tous les cours depuis le début du semestre, j'ai fait tous les TPs du mieux que j'ai pu, mais là c'est très compliqué j'ai trouvé. Des gens m'ont proposé de l'aide mais j'ai rien compris à leur code, je ne pourrais pas le reproduire alors je me suis arrêté là.
+
+Aurevoir 
