--- a/TP3  SUDOKU/mebare_h/README
+++ b/TP3  SUDOKU/mebare_h/README
@@ -1,3 +1,3 @@
 Bonsoir (ou bonjour), alors ce TP je n'ai pas du tout réussi. Je me suis arrêté au 2.2, je n'ai pas du tout réussi le reste parce que je ne voyais pas du tout comment ça pouvait fonctionner alors je me pose des questions, parce que j'ai assisté à tous les cours depuis le début du semestre, j'ai fait tous les TPs du mieux que j'ai pu, mais là c'est très compliqué j'ai trouvé. Des gens m'ont proposé de l'aide mais j'ai rien compris à leur code, je ne pourrais pas le reproduire alors je me suis arrêté là.
 
-Aurevoir 
+Merci à vous
