--- a/TP4  Ordre Supérieur/mebare_h/README
+++ b/TP4  Ordre Supérieur/mebare_h/README
@@ -1,3 +1,1 @@
-J'ai réussi et assimilé tout ce que j'ai fait, je l'ai fait avec "facilité" à part pour le 2.5.
-Ce dernier m'a demandé pas mal de reflexion, j'y ai passé environ 3 heures car j'ai essayé différentes manières de l'aborder (distances et coordonnées) puis j'ai aussi buter sur une erreur au niveau de l'ordre des instructions qui donnait un shuriken en graphique (mais c'était cool)
-Mes difficultés à travers ce TP ont été les appels recursifs multiples et la recherche d'erreur à corriger qui me faisait perdre beaucoup de temps.
+Bonsoir, pour ce TP je n'ai pas eu trop de difficultés, j'ai réussi à peu près tout ce que j'ai entrepris, à part le bubble sort, je me sens proche de la fin mais je n'arrive pas. Par contre les 2.3, 3.3 et + m'ont posé un grand problème, je suis bloqué dessus, je ne vois pas du tout comment faire.
